--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.0",
+    "is-hotkey": "^0.2.0",
     "lucide-react": "^0.445.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -54,6 +57,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/is-hotkey": "^0.1.10",
     "@types/jest": "^29.5.12",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.5.5",
