--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["vite-plugin-pwa/client"]
+    "types": ["vite-plugin-pwa/client", "node"]
   },
   "include": ["src"]
 }
