--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   ],
   "compilerOptions": {
     "baseUrl": ".",
-    "types": ["vite-plugin-pwa/client"],
+    "types": ["vite-plugin-pwa/client", "node"],
     "paths": {
       "@/*": ["./src/*"]
     }
