--- a/public/manifest.json
+++ b/public/manifest.json
@@ -38,7 +38,7 @@
       "src": "/icon-1024-maskable.png",
       "type": "image/png",
       "sizes": "1024x1024",
-      "purpose": "maskable any"
+      "purpose": "maskable"
     }
   ],
   "orientation": "any",
