More visual supports

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,6 +11,12 @@
       "sizes": "32x32"
     },
     {
+      "src": "/icon-144-maskable.png",
+      "type": "image/png",
+      "sizes": "144x144",
+      "purpose": "maskable"
+    },
+    {
       "src": "/icon-192-maskable.png",
       "type": "image/png",
       "sizes": "192x192",
@@ -21,6 +27,12 @@
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any"
+    },
+    {
+      "src": "/icon-256-maskable.png",
+      "type": "image/png",
+      "sizes": "256x256",
+      "purpose": "maskable"
     },
     {
       "src": "/icon-512-maskable.png",
@@ -51,7 +63,7 @@
   "screenshots": [
     {
       "src": "screenshots/visualization.png",
-      "sizes": "1375x860",
+      "sizes": "2860x1284",
       "type": "image/png",
       "form_factor": "wide",
       "label": "Illustration of recorded data"
