--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.3.7",
+  "version": "0.3.8",
   "name": "scarf-ui-pwa",
   "description": "SCARF-UI-PWA is a PWA to support research synthesis featuring SCEDs",
   "homepage": "https://www.smallnstats.com",
@@ -41,7 +41,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-accordion": "^1.2.0",
+    "@mdx-js/mdx": "^3.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-context-menu": "^2.2.1",
@@ -49,7 +49,6 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -61,10 +60,8 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.2.0",
     "is-hotkey": "^0.2.0",
     "lucide-react": "^0.445.0",
-    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -78,7 +75,6 @@
     "slate-react": "^0.110.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vite-plugin-mdx": "^3.6.0",
     "vite-plugin-mdx-plus": "^1.1.1",
@@ -103,6 +99,8 @@
     "license-report": "^6.5.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-font-inter": "^3.1.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.0",
